[package]
name = "elegant_request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.188"
serde_json = "1.0.105"
serde_yaml = "0.9.25"
serde_derive = "1.0.188"
async-recursion = "1.0.4"
